Added rule table.fotospecy2
Added a rule to match the colour of the tables in the recommended computer cases, which for some reason have their own css.

--- a/purepc-dark.user.css
+++ b/purepc-dark.user.css
@@ -126,19 +126,23 @@ p.recenzja *, h3.recenzja * {
 	filter: opacity(1);
 }
 table.specy tr td,
-table.fotospecy tr td {
+table.fotospecy tr td,
+table.fotospecy2 tr td {
 	border: 1px solid #121212 !important;
 }
 table.specy tr:nth-child(even) td,
-table.fotospecy tr:nth-child(even) td {
+table.fotospecy tr:nth-child(even) td,
+table.fotospecy2 tr:nth-child(even) td {
 	background: #2a2a2a !important;
 }
 table.specy tr:nth-child(odd) td,
-table.fotospecy tr:nth-child(odd) td {
+table.fotospecy tr:nth-child(odd) td,
+table.fotospecy2 tr:nth-child(odd) td {
 	background: #343434 !important;
 }
 table.specy tr:first-child td,
-table.fotospecy tr:first-child td {
+table.fotospecy tr:first-child td,
+table.fotospecy2 tr:first-child td {
 	background: #6c0505 !important;
 }
 .comment:hover, .comment .links {
